feat(ui): polish v1 (tokens, states, shimmer, a11y)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -189,6 +189,8 @@
       }
     }
   },
+  "stubSoundToggle": "Sound effects",
+  "stubHapticsToggle": "Haptic feedback",
   "localeEnglish": "English",
   "localeUkrainian": "Ukrainian",
   "localeRussian": "Russian",
