--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -189,6 +189,8 @@
       }
     }
   },
+  "stubSoundToggle": "Звуковые эффекты",
+  "stubHapticsToggle": "Виброотклик",
   "localeEnglish": "Английский",
   "localeUkrainian": "Украинский",
   "localeRussian": "Русский",
