--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -189,6 +189,8 @@
       }
     }
   },
+  "stubSoundToggle": "Звукові ефекти",
+  "stubHapticsToggle": "Вібровідгук",
   "localeEnglish": "Англійська",
   "localeUkrainian": "Українська",
   "localeRussian": "Російська",
