Fix localization, icon references, and theme configuration

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "DataG",
+  "appTitle": "Date Guesser",
   "localeMenuTooltip": "Change language",
   "localeUkrainian": "Ukrainian",
   "localeRussian": "Russian",
