--- a/l10n/app_ru.arb
+++ b/l10n/app_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "appTitle": "DataG",
+  "appTitle": "Угадай дату",
   "localeMenuTooltip": "Изменить язык",
   "localeUkrainian": "Украинский",
   "localeRussian": "Русский",
