Fix Ukrainian digits placeholder type

--- a/l10n/app_uk.arb
+++ b/l10n/app_uk.arb
@@ -42,7 +42,7 @@
   "@roundLastDigitsHint": {
     "placeholders": {
       "digits": {
-        "type": "String"
+        "type": "Object"
       }
     }
   },
