--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Date Guesser",
+  "app_title": "DataG",
   "roundTitleFallback": "Round",
   "roundDetailsComingSoon": "More details coming soon.",
   "roundNoQuestions": "No questions available yet.",
@@ -45,6 +45,10 @@
   "homeStubFriendsTitle": "Play with friends",
   "homePlayButton": "Play",
   "homeChangeCategory": "Change category",
+  "resources_lives": "Lives",
+  "resources_energy": "Energy",
+  "resources_gems": "Gems",
+  "resources_level": "Level",
   "localeMenuTooltip": "Change language",
   "localeEnglish": "English",
   "localeRussian": "Russian",
