Revert "Merge pull request #32 from Humaneyew/codex/implement-design-system-and-app-shell"
This reverts commit 0ad104de3a8df3bbdfb275f2fb881e8befcba6ca, reversing
changes made to 0f94ddea6390a9cdc59941b8dfd8ebcd9a6aa230.

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "app_title": "DataG",
+  "appTitle": "Date Guesser",
   "roundTitleFallback": "Round",
   "roundDetailsComingSoon": "More details coming soon.",
   "roundNoQuestions": "No questions available yet.",
@@ -45,10 +45,6 @@
   "homeStubFriendsTitle": "Play with friends",
   "homePlayButton": "Play",
   "homeChangeCategory": "Change category",
-  "resources_lives": "Lives",
-  "resources_energy": "Energy",
-  "resources_gems": "Gems",
-  "resources_level": "Level",
   "localeMenuTooltip": "Change language",
   "localeEnglish": "English",
   "localeRussian": "Russian",
